Changed color footer.logo and  added highlighting the current page

--- a/index.html
+++ b/index.html
@@ -19,15 +19,14 @@
     <header>
         <nav class="header-navigation">
             <a href="./index.html" class="header-logo link logo">
-                <span>Web</span>
-                Studio
+                <span>Web</span>Studio
             </a>
             <ul class="site-navigation list">
                 <li class="header-item">
-                    <a class="header-link link" href="./index.html">Studio</a>
+                    <a class="header-link link current" href="./index.html">Studio</a>
                 </li>
                 <li class="header-item">
-                    <a class="header-link link current" href="./portfolio.html">
+                    <a class="header-link link " href="./portfolio.html">
                         Portfolio
                     </a>
                 </li>
@@ -138,8 +137,7 @@
     <!-- Footer -->
     <footer class="footer">
         <a href="./index.html" class="footer-logo link logo">
-            <span>Web</span>
-            Studio
+            <span>Web</span>Studio
         </a>
         <p class="footer-text">
             Increase the flow of customers and sales for your business with digital
