--- a/portfolio.html
+++ b/portfolio.html
@@ -19,8 +19,7 @@
     <header>
         <nav class="header-navigation">
             <a href="./index.html" class="header-logo link logo">
-                <span>Web</span>
-                Studio
+                <span>Web</span>Studio
             </a>
             <ul class="site-navigation list">
                 <li class="header-item">
@@ -131,8 +130,7 @@
 
     <footer class="footer">
         <a href="./index.html" class="footer-logo link logo">
-            <span>Web</span>
-            Studio
+            <span>Web</span>Studio
         </a>
         <p class="footer-text">
             Increase the flow of customers and sales for your business with digital
